[gd_scene load_steps=4 format=3 uid="uid://bci42av15xo4x"]

[ext_resource type="Script" path="res://scenes/ability_manager/ability_slot.gd" id="1_oihqh"]
[ext_resource type="Texture2D" uid="uid://b6y8na6rm2gcb" path="res://assets/item/item_sheet.png" id="2_ea4v3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m8b3d"]
atlas = ExtResource("2_ea4v3")
region = Rect2(352, 96, 32, 32)

[node name="AbilitySlot" type="AspectRatioContainer"]
custom_minimum_size = Vector2(100, 100)
script = ExtResource("1_oihqh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="AbilityIcon" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_m8b3d")

[connection signal="mouse_entered" from="MarginContainer/AbilityIcon" to="." method="_on_ability_icon_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/AbilityIcon" to="." method="_on_ability_icon_mouse_exited"]
